// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no valid discounts 1`] = `
<div
  className=""
>
  <div
    className="content"
  >
    <div
      className="root"
    >
      <div
        className="root heading"
      >
        <span
          className=""
        >
          Total
        </span>
      </div>
      <div
        className="root subheading"
      >
        <span
          className=""
        >
          $732,641.00
           
          <span
            className="gstLabel"
          >
            +GST
          </span>
           
        </span>
      </div>
      <button
        className="root checkoutButton root_isPink"
        disabled={false}
        type="submit"
      >
        Checkout
      </button>
    </div>
  </div>
</div>
`;

exports[`renders correctly with nothing in cart 1`] = `null`;

exports[`renders correctly with valid discounts 1`] = `
<div
  className=""
>
  <div
    className="content"
  >
    <div
      className="root"
    >
      <div
        className="root heading"
      >
        <span
          className=""
        >
          Total
        </span>
      </div>
      <div
        className="root subheading"
      >
        <span
          className=""
        >
          $715,679.00
           
          <span
            className="gstLabel"
          >
            +GST
          </span>
           
          <span
            className="savings"
          >
            (You save 
            $16,962.00
            !)
          </span>
        </span>
      </div>
      <button
        className="root checkoutButton root_isPink"
        disabled={false}
        type="submit"
      >
        Checkout
      </button>
    </div>
  </div>
</div>
`;
